--- a/src/main/resources/es-plugin.properties
+++ b/src/main/resources/es-plugin.properties
@@ -1,2 +1,11 @@
-plugin=org.elasticsearch.plugin.image.ImagePlugin
+description=${project.description}
+
 version=${project.version}
+
+name=${elasticsearch.plugin.name}
+
+classname=${elasticsearch.plugin.classname}
+
+java.version=1.7
+
+elasticsearch.version=${elasticsearch.version}
