--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <name>elasticsearch-image</name>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.kzwang</groupId>
+    <groupId>org.nlpcn</groupId>
     <artifactId>elasticsearch-image</artifactId>
     <version>2.3.1.0</version>
     <packaging>jar</packaging>
     <description>Image Plugin for ElasticSearch</description>
-    <url>http://github.com/kzwang/elasticsearch-image</url>
+    <url>https://github.com/shi-yuan/elasticsearch-image</url>
 
     <repositories>
         <repository>
@@ -25,9 +25,9 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:git@github.com:kzwang/elasticsearch-image.git</connection>
-        <developerConnection>scm:git:git@github.com:kzwang/elasticsearch-image.git</developerConnection>
-        <url>http://github.com/kzwang/elasticsearch-image</url>
+        <connection>scm:git:git@github.com:shi-yuan/elasticsearch-image.git</connection>
+        <developerConnection>scm:git:git@github.com:shi-yuan/elasticsearch-image.git</developerConnection>
+        <url>http://github.com/shi-yuan/elasticsearch-image</url>
     </scm>
 
     <developers>
@@ -35,6 +35,11 @@
             <id>kzwang</id>
             <name>Kevin Wang</name>
             <email>kevin807359@gmail.com</email>
+        </developer>
+        <developer>
+            <id>shi-yuan</id>
+            <name>shi-yuan</name>
+            <email>shiyuan_90@163.com</email>
         </developer>
     </developers>
 
@@ -47,6 +52,7 @@
     <properties>
         <elasticsearch.version>2.3.1</elasticsearch.version>
         <lucene.version>5.5.0</lucene.version>
+        <elasticsearch.plugin.jvm>true</elasticsearch.plugin.jvm>
         <elasticsearch.plugin.name>elasticsearch-image</elasticsearch.plugin.name>
         <elasticsearch.plugin.classname>org.elasticsearch.plugin.image.ImagePlugin</elasticsearch.plugin.classname>
         <tests.jvms>1</tests.jvms>
@@ -56,20 +62,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-test-framework</artifactId>
-            <version>${lucene.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>${elasticsearch.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
         <dependency>
             <groupId>com.github.kzwang</groupId>  <!-- Modified to deploy on maven -->
             <artifactId>lire</artifactId>
@@ -89,10 +81,23 @@
         </dependency>
 
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>${elasticsearch.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-test-framework</artifactId>
+            <version>${lucene.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -108,6 +113,19 @@
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- TODO: change to commons-imaging when it's released -->
@@ -163,7 +181,7 @@
             <plugin>
                 <groupId>com.carrotsearch.randomizedtesting</groupId>
                 <artifactId>junit4-maven-plugin</artifactId>
-                <version>2.0.15</version>
+                <version>2.5.3</version>
                 <executions>
                     <execution>
                         <id>tests</id>
@@ -176,9 +194,9 @@
                             <jvmOutputAction>pipe,warn</jvmOutputAction>
                             <leaveTemporary>true</leaveTemporary>
                             <listeners>
-                                <report-ant-xml mavenExtensions="true" dir="${project.build.directory}/surefire-reports" />
-                                <report-text showThrowable="true" showStackTraces="true" showOutput="${tests.output}" showStatusOk="false" showStatusError="true" showStatusFailure="true" showStatusIgnored="true" showSuiteSummary="true" timestamps="false" />
-                                <report-execution-times file="${basedir}/.local-execution-hints.log" />
+                                <report-ant-xml mavenExtensions="true" dir="${project.build.directory}/surefire-reports"/>
+                                <report-text showThrowable="true" showStackTraces="true" showOutput="${tests.output}" showStatusOk="false" showStatusError="true" showStatusFailure="true" showStatusIgnored="true" showSuiteSummary="true" timestamps="false"/>
+                                <report-execution-times file="${basedir}/.local-execution-hints.log"/>
                             </listeners>
                             <assertions>
                                 <enable/>
@@ -201,6 +219,7 @@
                                 <param>-Xmx512m</param>
                                 <param>-XX:MaxDirectMemorySize=512m</param>
                                 <param>-Des.logger.prefix=</param>
+                                <param>-Djava.security.policy==${project.basedir}/src/main/plugin-metadata/plugin-security.policy</param>
                             </jvmArgs>
                             <shuffleOnSlave>${tests.shuffle}</shuffleOnSlave>
                         </configuration>
