--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -4,6 +4,8 @@ version=${project.version}
 
 name=${elasticsearch.plugin.name}
 
+jvm=${elasticsearch.plugin.jvm}
+
 classname=${elasticsearch.plugin.classname}
 
 java.version=1.7
