--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,6 @@
 
     <developers>
         <developer>
-            <id>kzwang</id>
-            <name>Kevin Wang</name>
-            <email>kevin807359@gmail.com</email>
-        </developer>
-        <developer>
             <id>shi-yuan</id>
             <name>shi-yuan</name>
             <email>shiyuan_90@163.com</email>
@@ -62,12 +57,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.github.kzwang</groupId>  <!-- Modified to deploy on maven -->
-            <artifactId>lire</artifactId>
-            <version>0.9.4-kzwang-beta1</version>
-        </dependency>
-
         <dependency>
             <groupId>com.twelvemonkeys.imageio</groupId> <!-- Some jpg images failed to parse by standard Java ImageIO, this plugin will fix that -->
             <artifactId>imageio-jpeg</artifactId>
@@ -146,7 +135,7 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>4.2.2</version>
+            <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -172,10 +161,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.7.0</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <encoding>UTF-8</encoding>
+                    <compilerArguments>
+                        <extdirs>${project.basedir}/lib/</extdirs>
+                    </compilerArguments>
                 </configuration>
             </plugin>
             <plugin>
@@ -215,6 +208,9 @@
                                 <exclude>**/Abstract*.class</exclude>
                                 <exclude>**/*StressTest.class</exclude>
                             </excludes>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>${project.basedir}/lib/lire.jar</additionalClasspathElement>
+                            </additionalClasspathElements>
                             <jvmArgs>
                                 <param>-Xmx512m</param>
                                 <param>-XX:MaxDirectMemorySize=512m</param>
@@ -230,7 +226,7 @@
                 <!-- we skip surefire to work with randomized testing above -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
+                <version>2.21.0</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
@@ -239,7 +235,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -252,7 +248,7 @@
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.1.0</version>
                 <configuration>
                     <appendAssemblyId>false</appendAssemblyId>
                     <outputDirectory>${project.build.directory}/releases/</outputDirectory>
@@ -273,7 +269,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.0.0</version>
+                <configuration>
+                    <extdirs>${project.basedir}/lib/</extdirs>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
